set(HEADER_FILES
    actor/actor_features/ai/fsm/fsm.h
    actor/actor_features/ai/fsm/fsm_state_type.h
    actor/actor_features/ai/states/fsm_state.h
    actor/actor_features/ai/states/move_to_target.h
    actor/actor_features/ai/states/idle.h
    actor/actor_features/ai/states/melee_attack.h
    actor/actor_features/ai/states/player_controlled.h
    actor/actor_features/ai/states/range_attack.h
    actor/actor_features/ai/ai.h
    actor/actor_features/ai/ai_type.h
    actor/actor_features/openable/openable.h
    actor/actor_features/wearer/item_slot_type.h
    actor/actor_features/wearer/wearer.h
    actor/actor_features/actor_feature.h
    actor/actor_features/inventory/inventory.h
    actor/actor_features/character/character.h
    actor/actor_features/character/playable_character.h
    actor/actor_features/character/modifier.h
    actor/actor_features/character/modifier_type.h
    actor/actor_features/character/character_type.h
    actor/actor_features/character/relations.h
    actor/actor_features/pickable/item_type.h
    actor/actor_features/pickable/pickable.h
    actor/actor_features/pickable/scroll.h
    actor/actor_features/pickable/pickable_category.h
    actor/actor_features/destroyable/destroyable.h
    actor/actor_features/trap/trap.h
    actor/actor_features/trap/trap_id.h
    actor/actor_features/talker/talker.h
    actor/actor.h
    actor/actor_type.h
    actor/status_effects_manager.h
    actor/status_effect.h
    commands/cmd_help.h
    commands/cmd_close.h
    commands/cmd_fullscreen.h
    commands/cmd_inventory.h
    commands/cmd_move.h
    commands/cmd_open.h
    commands/cmd_pick.h
    commands/cmd_use.h
    commands/command.h
    commands/cmd_put_into.h
    commands/cmd_look.h
    commands/cmd_cast.h
    commands/cmd_game_menu.h
    commands/cmd_spellbook.h
    commands/cmd_inspect.h
    commands/cmd_rest.h
    commands/cmd_use_skill.h
    commands/cmd_talk.h
    commands/cmd_shot.h
    commands/cmd_debug.h
    gui/window/inventory_window/bag_manager.h
    gui/window/inventory_window/body_manager.h
    gui/window/inventory_window/inventory_window.h     
    gui/window/inventory_window/character_info_panel.h
    gui/window/amount_window.h
    gui/window/window_manager.h
    gui/window/game_menu_window.h
    gui/window/load_save_game_window.h
    gui/window/question_dialog.h
    gui/gui.h
    gui/message_box.h
    gui/window/pick_up_window.h
    gui/window/text_window/text_window.h
    gui/window/text_window/fixed_size_text_window.h
    gui/window/text_window/resizeable_text_window.h
    gui/window/awindow.h
    gui/window/amultipanel_window.h
    gui/window/menu_window.h
    gui/window/input_dialog.h
    gui/window/spellbook_window/spellbook_window.h
    gui/window/spellbook_window/spell_level_panel.h
    gui/window/spellbook_window/spell_slot_panel.h
    gui/window/spellbook_window/known_spells_panel.h
    gui/window/character_creation_window/character_creation_window.h
    gui/window/character_creation_window/race_selection_panel.h
    gui/window/character_creation_window/class_selection_panel.h
    gui/window/character_creation_window/ability_scores_selection_panel.h
    gui/window/character_creation_window/value_setting_panel.h
    gui/window/character_creation_window/thief_skills_selection_panel.h
    gui/window/talk_window.h
    utils/target_selector/executor_selector.h
    utils/target_selector/single_neighbour_selector.h
    utils/target_selector/single_range_selector.h
    utils/target_selector/single_range_projectile_selector.h
    utils/target_selector/area_range_selector.h
    utils/target_selector/target_selector.h
    utils/colored_string.h
    utils/direction_selector.h
    utils/messenger.h
    utils/target_type.h
    utils/utils.h
    utils/configuration.h
    utils/xml_utils.h
    utils/amarlon_except.h
    utils/dices.h
    utils/text_formater.h
    utils/base64.h
    utils/target.h
    utils/damage.h
    utils/actor_container.h
    utils/event.h
    utils/event_id.h
    utils/observer.h
    utils/subject.h
    utils/direct_path.h
    utils/key.h
    utils/point.h
    world/map.h
    world/map_id.h
    world/tile_type.h
    world/tile.h
    command_executor.h
    engine.h
    actor/actor_actions/actor_action.h
    actor/actor_actions/move_action.h
    actor/actor_actions/monster_move_action.h
    actor/actor_actions/attack_action.h
    actor/actor_actions/pickup_action.h
    actor/actor_actions/drop_action.h
    actor/actor_actions/close_action.h
    actor/actor_actions/open_action.h
    actor/actor_actions/equip_action.h
    actor/actor_actions/unequip_action.h
    actor/actor_actions/teleport_action.h
    actor/actor_actions/use_action.h
    actor/actor_actions/transcribe_action.h
    actor/actor_actions/die_action.h
    actor/actor_actions/cast_action.h
    actor/actor_actions/use_skill_action.h
    actor/actor_actions/shot_action.h
    world/directions.h
    world/world.h
    rpg_system/ability_scores.h
    rpg_system/character_class_type.h
    rpg_system/attack_bonus_table.h
    rpg_system/saving_throws_table.h
    rpg_system/experience_table.h
    rpg_system/race_type.h
    rpg_system/race.h
    rpg_system/character_class.h
    rpg_system/carrying_capacity.h
    spells/spell.h
    spells/spell_id.h
    spells/spell_book.h
    spells/spell_slot.h
    animations/animation.h
    animations/animation_type.h
    animations/blink.h
    animations/throw.h
    animations/expanding_circle.h
    animations/blinking_circle.h
    lua_api/lua_state.h
    lua_api/defines/converters.h
    lua_api/defines/converters.h
    lua_api/registrations/registrar.h
    lua_api/registrations/registration_manager.h
    lua_api/registrations/spelldb_registrar.h
    lua_api/registrations/actor_registrar.h
    lua_api/registrations/damage_registrar.h
    lua_api/registrations/target_registrar.h
    lua_api/registrations/status_effect_registrar.h
    lua_api/registrations/animation_registrar.h
    lua_api/registrations/free_functions_registrar.h
    lua_api/registrations/globals_registrar.h
    lua_api/registrations/skill_registrar.h
    lua_api/registrations/map_registrar.h
    lua_api/registrations/modifier_registrar.h
    lua_api/registrations/dialog_registarar.h
    skills/skill.h
    skills/skill_id.h
    databases/map_db.h
    databases/actor_db.h
    databases/tile_db.h
    databases/spell_db.h
    databases/skill_db.h
    databases/rpg_db.h
)

set(SOURCE_FILES
    actor/actor_features/ai/fsm/fsm.cpp
    actor/actor_features/ai/states/fsm_state.cpp
    actor/actor_features/ai/states/move_to_target.cpp
    actor/actor_features/ai/states/idle.cpp
    actor/actor_features/ai/states/melee_attack.cpp
    actor/actor_features/ai/states/player_controlled.cpp
    actor/actor_features/ai/states/range_attack.cpp
    actor/actor_features/ai/ai.cpp
    actor/actor_features/openable/openable.cpp
    actor/actor_features/wearer/wearer.cpp
    actor/actor_features/actor_feature.cpp
    actor/actor_features/inventory/inventory.cpp
    actor/actor_features/character/character.cpp
    actor/actor_features/character/playable_character.cpp
    actor/actor_features/character/relations.cpp
    actor/actor_features/pickable/pickable.cpp
    actor/actor_features/pickable/scroll.cpp
    actor/actor_features/destroyable/destroyable.cpp
    actor/actor_features/trap/trap.cpp
    actor/actor_features/talker/talker.cpp
    actor/actor.cpp
    actor/status_effects_manager.cpp
    actor/status_effect.cpp
    commands/cmd_debug.cpp
    commands/cmd_talk.cpp
    commands/cmd_help.cpp
    commands/cmd_close.cpp
    commands/cmd_fullscreen.cpp
    commands/cmd_inventory.cpp
    commands/cmd_move.cpp
    commands/cmd_open.cpp
    commands/cmd_pick.cpp
    commands/cmd_use.cpp
    commands/command.cpp
    commands/cmd_put_into.cpp
    commands/cmd_look.cpp
    commands/cmd_cast.cpp
    commands/cmd_game_menu.cpp
    commands/cmd_spellbook.cpp
    commands/cmd_inspect.cpp
    commands/cmd_rest.cpp
    commands/cmd_use_skill.cpp
    commands/cmd_shot.cpp
    gui/window/inventory_window/bag_manager.cpp
    gui/window/inventory_window/body_manager.cpp
    gui/window/inventory_window/inventory_window.cpp
    gui/window/inventory_window/character_info_panel.cpp
    gui/window/amount_window.cpp
    gui/window/window_manager.cpp
    gui/window/menu_window.cpp
    gui/window/game_menu_window.cpp
    gui/window/load_save_game_window.cpp
    gui/window/question_dialog.cpp
    gui/window/amultipanel_window.cpp
    gui/gui.cpp
    gui/message_box.cpp
    gui/window/pick_up_window.cpp
    gui/window/text_window/text_window.cpp
    gui/window/text_window/resizeable_text_window.cpp    
    gui/window/text_window/fixed_size_text_window.cpp
    gui/window/input_dialog.cpp
    gui/window/spellbook_window/spellbook_window.cpp
    gui/window/spellbook_window/spell_level_panel.cpp
    gui/window/spellbook_window/spell_slot_panel.cpp
    gui/window/spellbook_window/known_spells_panel.cpp
    gui/window/character_creation_window/character_creation_window.cpp
    gui/window/character_creation_window/race_selection_panel.cpp
    gui/window/character_creation_window/class_selection_panel.cpp
    gui/window/character_creation_window/ability_scores_selection_panel.cpp
    gui/window/character_creation_window/value_setting_panel.cpp
    gui/window/character_creation_window/thief_skills_selection_panel.cpp
    gui/window/talk_window.cpp
    utils/target_selector/executor_selector.cpp
    utils/target_selector/single_range_projectile_selector.cpp
    utils/target_selector/single_neighbour_selector.cpp
    utils/target_selector/target_selector.cpp
    utils/target_selector/area_range_selector.cpp
    utils/target_selector/single_range_selector.cpp
    utils/direction_selector.cpp
    utils/messenger.cpp
    utils/utils.cpp
    utils/console_utils.cpp
    utils/configuration.cpp
    utils/dices.cpp
    utils/text_formater.cpp
    utils/base64.cpp
    utils/damage.cpp
    utils/actor_container.cpp
    utils/target.cpp
    utils/subject.cpp
    utils/direct_path.cpp
    world/map.cpp
    world/tile.cpp
    command_executor.cpp
    engine.cpp
    main.cpp
    actor/actor_actions/move_action.cpp
    actor/actor_actions/monster_move_action.cpp
    actor/actor_actions/attack_action.cpp
    actor/actor_actions/pickup_action.cpp
    actor/actor_actions/drop_action.cpp
    actor/actor_actions/close_action.cpp
    actor/actor_actions/open_action.cpp
    actor/actor_actions/equip_action.cpp
    actor/actor_actions/unequip_action.cpp
    actor/actor_actions/teleport_action.cpp
    actor/actor_actions/use_action.cpp
    actor/actor_actions/transcribe_action.cpp
    actor/actor_actions/die_action.cpp
    actor/actor_actions/cast_action.cpp
    actor/actor_actions/use_skill_action.cpp
    actor/actor_actions/shot_action.cpp
    world/world.cpp
    rpg_system/ability_scores.cpp
    rpg_system/attack_bonus_table.cpp
    rpg_system/saving_throws_table.cpp
    rpg_system/experience_table.cpp
    rpg_system/carrying_capacity.cpp
    rpg_system/character_class.cpp
    rpg_system/race.cpp
    spells/spell.cpp
    spells/spell_book.cpp
    animations/animation.cpp
    animations/blink.cpp
    animations/throw.cpp
    animations/expanding_circle.cpp
    animations/blinking_circle.cpp
    lua_api/lua_state.cpp
    lua_api/registrations/registration_manager.cpp
    lua_api/registrations/spelldb_registrar.cpp
    lua_api/registrations/actor_registrar.cpp
    lua_api/registrations/damage_registrar.cpp
    lua_api/registrations/target_registrar.cpp
    lua_api/registrations/status_effect_registrar.cpp
    lua_api/registrations/animation_registrar.cpp
    lua_api/registrations/free_functions_registrar.cpp
    lua_api/registrations/globals_registrar.cpp
    lua_api/registrations/skill_registrar.cpp
    lua_api/registrations/map_registrar.cpp
    lua_api/registrations/modifier_registrar.cpp
    lua_api/registrations/dialog_registarar.cpp
    databases/actor_db.cpp
    databases/map_db.cpp
    databases/tile_db.cpp
    databases/spell_db.cpp
    databases/skill_db.cpp
    databases/rpg_db.cpp
    skills/skill.cpp
)

add_library(amarlon_core STATIC ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(amarlon_core ${TCOD_LIBRARIES} ${LUA_LIBRARIES} ${LUABIND_LIBRARIES} ${CMAKE_DL_LIBS})

add_executable(amarlon main.cpp)
target_link_libraries(amarlon amarlon_core amarlon_widgets data_gateway ${TCOD_LIBRARIES} ${LUA_LIBRARIES} ${LUABIND_LIBRARIES} ${CMAKE_DL_LIBS})

add_custom_command(TARGET amarlon POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/resources $<TARGET_FILE_DIR:amarlon>)
