find_package(GTest REQUIRED)

set(SOURCE_FILES
    ActorTest.cpp
    CommandExecutorTest.cpp
    main.cpp
    UtilsTest.cpp
    DataGateway/DataGatewayTest.cpp
    DataGateway/MapGatewayTest.cpp
    World/MapTest.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/Actor.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/ActorFeature.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Container.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Fighter.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Pickable.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Ai/Ai.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Ai/MonsterAi.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Openable/Openable.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Openable/OpenableContainer.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Openable/OpenableDoor.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/Effects/Effect.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/Effects/LockEffect.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/Effects/SelfHealEffect.cpp
    ${PROJECT_SOURCE_DIR}/src/DataGateways/ActorDB.cpp
    ${PROJECT_SOURCE_DIR}/src/DataGateways/DataGateway.cpp
    ${PROJECT_SOURCE_DIR}/src/DataGateways/MapGateway.cpp
    ${PROJECT_SOURCE_DIR}/src/DataGateways/TileDB.cpp
    ${PROJECT_SOURCE_DIR}/src/DataGateways/Parsers/ActorParser.cpp
    ${PROJECT_SOURCE_DIR}/src/world/map.cpp
    ${PROJECT_SOURCE_DIR}/src/utils/direction_selector.cpp
    ${PROJECT_SOURCE_DIR}/src/utils/item_picker.cpp
    ${PROJECT_SOURCE_DIR}/src/utils/messenger.cpp
    ${PROJECT_SOURCE_DIR}/src/utils/utils.cpp
    ${PROJECT_SOURCE_DIR}/src/utils/target_selector/executor_selector.cpp
    ${PROJECT_SOURCE_DIR}/src/utils/target_selector/single_neighbour_selector.cpp
    ${PROJECT_SOURCE_DIR}/src/utils/target_selector/target_selector.cpp
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdClose.cpp
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdFullscreen.cpp
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdInventory.cpp
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdMove.cpp
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdOpen.cpp
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdPick.cpp
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdUse.cpp
    ${PROJECT_SOURCE_DIR}/src/Commands/Command.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/window/amount_window.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/gui.cpp
    ${PROJECT_SOURCE_DIR}/src/command_executor.cpp
    ${PROJECT_SOURCE_DIR}/src/engine.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/widget/bar.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/widget/list.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/widget/panel.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/widget/widget.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/widget/label.cpp
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Wearer/wearer.cpp
    WearerTest.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/window/inventory_window/inventory_window.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/widget/menu/label_menu_item.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/widget/menu/menu.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/widget/menu/slot_menu_item.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/window/text_window.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/widget/menu/items_menu.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/window/inventory_window/bag_manager.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/window/inventory_window/body_manager.cpp
    ${PROJECT_SOURCE_DIR}/src/gui/window/pick_up_window.cpp
    ${PROJECT_SOURCE_DIR}/src/utils/console_freezer.cpp
    ${PROJECT_SOURCE_DIR}/src/world/map.h
    ${PROJECT_SOURCE_DIR}/src/Actor/Actor.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorType.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/ActorFeature.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Container.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Fighter.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Pickable.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Ai/Ai.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Ai/AiType.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Ai/MonsterAi.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Openable/Openable.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Openable/OpenableContainer.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Openable/OpenableDoor.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Openable/OpenableType.h
    ${PROJECT_SOURCE_DIR}/src/Actor/Effects/Effect.h
    ${PROJECT_SOURCE_DIR}/src/Actor/Effects/EffectType.h
    ${PROJECT_SOURCE_DIR}/src/Actor/Effects/LockEffect.h
    ${PROJECT_SOURCE_DIR}/src/Actor/Effects/SelfHealEffect.h
    ${PROJECT_SOURCE_DIR}/src/DataGateways/ActorDB.h
    ${PROJECT_SOURCE_DIR}/src/DataGateways/ActorDescriptions.h
    ${PROJECT_SOURCE_DIR}/src/DataGateways/DataGateway.h
    ${PROJECT_SOURCE_DIR}/src/DataGateways/MapGateway.h
    ${PROJECT_SOURCE_DIR}/src/DataGateways/TileDB.h
    ${PROJECT_SOURCE_DIR}/src/DataGateways/Parsers/ActorParser.h
    ${PROJECT_SOURCE_DIR}/src/world/map.h
    ${PROJECT_SOURCE_DIR}/src/world/map_id.h
    ${PROJECT_SOURCE_DIR}/src/world/tile_type.h
    ${PROJECT_SOURCE_DIR}/src/utils/direction_selector.h
    ${PROJECT_SOURCE_DIR}/src/utils/item_picker.h
    ${PROJECT_SOURCE_DIR}/src/utils/amarlon_except.h
#    ${PROJECT_SOURCE_DIR}/src/utils/LogEntry.h
    ${PROJECT_SOURCE_DIR}/src/utils/messenger.h
    ${PROJECT_SOURCE_DIR}/src/utils/selector_type.h
    ${PROJECT_SOURCE_DIR}/src/utils/utils.h
    ${PROJECT_SOURCE_DIR}/src/utils/xml_utils.h
    ${PROJECT_SOURCE_DIR}/src/utils/target_selector/executor_selector.h
    ${PROJECT_SOURCE_DIR}/src/utils/target_selector/single_neighbour_selector.h
    ${PROJECT_SOURCE_DIR}/src/utils/target_selector/target_selector.h
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdClose.h
#    ${PROJECT_SOURCE_DIR}/src/Commands/CmdDrop.h
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdFullscreen.h
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdInventory.h
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdMove.h
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdOpen.h
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdPick.h
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdUse.h
    ${PROJECT_SOURCE_DIR}/src/Commands/Command.h
    ${PROJECT_SOURCE_DIR}/src/gui/window/amount_window.h
    ${PROJECT_SOURCE_DIR}/src/gui/gui.h
    ${PROJECT_SOURCE_DIR}/src/command_executor.h
    ${PROJECT_SOURCE_DIR}/src/engine.h
    ${PROJECT_SOURCE_DIR}/src/gui/widget/bar.h
    ${PROJECT_SOURCE_DIR}/src/gui/widget/list.h
    ${PROJECT_SOURCE_DIR}/src/gui/widget/panel.h
    ${PROJECT_SOURCE_DIR}/src/gui/widget/widget.h
    ${PROJECT_SOURCE_DIR}/src/gui/widget/label.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Wearer/item_slot_type.h
    ${PROJECT_SOURCE_DIR}/src/Actor/ActorFeatures/Wearer/wearer.h
    ${PROJECT_SOURCE_DIR}/src/gui/window/inventory_window/inventory_window.h
    ${PROJECT_SOURCE_DIR}/src/gui/widget/menu/label_menu_item.h
    ${PROJECT_SOURCE_DIR}/src/gui/widget/menu/menu_item.h
    ${PROJECT_SOURCE_DIR}/src/gui/widget/menu/menu.h
    ${PROJECT_SOURCE_DIR}/src/gui/widget/menu/slot_menu_item.h
    ${PROJECT_SOURCE_DIR}/src/gui/window/text_window.h
    ${PROJECT_SOURCE_DIR}/src/gui/widget/menu/items_menu.h
    ${PROJECT_SOURCE_DIR}/src/gui/window/inventory_window/bag_manager.h
    ${PROJECT_SOURCE_DIR}/src/gui/window/inventory_window/body_manager.h
    ${PROJECT_SOURCE_DIR}/src/gui/window/pick_up_window.h
    ${PROJECT_SOURCE_DIR}/src/utils/console_freezer.h
    ${PROJECT_SOURCE_DIR}/src/utils/configuration.cpp
    ${PROJECT_SOURCE_DIR}/src/utils/configuration.h
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdHelp.cpp
    ${PROJECT_SOURCE_DIR}/src/Commands/CmdHelp.h
    ${PROJECT_SOURCE_DIR}/src/Commands/cmd_put_into.h
    ${PROJECT_SOURCE_DIR}/src/Commands/cmd_put_into.cpp
)

add_executable(ut_amarlon ${SOURCE_FILES})
target_link_libraries(ut_amarlon ${TCOD_LIBRARIES} ${GTEST_LIBRARIES})
