set(HEADER_FILES
    descriptions/tile_description.h
    parsers/parser.h
    parsers/tile_parser.h
    parsers/map_parser.h
    parsers/spell_parser.h
    parsers/rpg_parser.h
    parsers/dialog_parser.h
    serializers/serializer.h
    serializers/map_serializer.h
    serializers/action_serializer.h
    descriptions/actor_descriptions.h
    descriptions/spell_description.h
    descriptions/actor_feature_descriptions/pickable_description.h
    descriptions/actor_feature_descriptions/character_description.h
    descriptions/actor_feature_descriptions/ai_description.h
    descriptions/actor_feature_descriptions/openable_description.h
    descriptions/actor_feature_descriptions/wearer_description.h
    descriptions/actor_feature_descriptions/inventory_description.h
    descriptions/actor_feature_descriptions/destroyable_description.h
    descriptions/actor_feature_descriptions/trap_description.h
    descriptions/actor_feature_descriptions/talker_description.h
    descriptions/actor_feature_descriptions/dialog.h
    descriptions/description.h
    descriptions/map_description.h
    descriptions/actor_action_description.h
    descriptions/spellbook_description.h
    descriptions/race_description.h
    descriptions/item_type_description.h
    descriptions/character_class_description.h
)

set(SOURCE_FILES
    parsers/tile_parser.cpp
    parsers/map_parser.cpp
    parsers/spell_parser.cpp
    parsers/rpg_parser.cpp
    parsers/dialog_parser.cpp
    serializers/map_serializer.cpp
    serializers/action_serializer.cpp
)

add_library(persistence SHARED ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(persistence)
